syntax = "proto3";

import "google/api/annotations.proto"; //import related Google APIs

option csharp_namespace = "DMSpro.OMS.MdmService.Protos.Vendors";

message Vendor 
{
    string Id = 1;
    string TenantId = 2;
    string CompanyId = 3;
    string Code = 4;
    string Name = 5;
    string ShortName = 6;
}

message GetAsyncVendorRequest {
    string  VendorId = 1;
}

message GetAsyncVendorResponse { 
    Vendor Vendor = 1; 
}

service VendorsProtoAppService {
    rpc GetAsync(GetAsyncVendorRequest) returns (GetAsyncVendorResponse) {
        option (google.api.http) = {
            get: "/grpc/mdmService/vendors/get-async" //expose from this url
        };
    }
}